--- a/USPlayingCard/Properties/launchSettings.json
+++ b/USPlayingCard/Properties/launchSettings.json
@@ -3,8 +3,9 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30410",
-      //"sslPort": 44345
+      "applicationUrl": "http://localhost:30410"
+      //make sure to uncomment when i want to check at home
+      //"sslPort": 44345 
     }
   },
   "profiles": {
