--- a/USPlayingCard/appsettings.json
+++ b/USPlayingCard/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USPlayingCard-8B10CDB3-E2D1-4909-A8DB-3C2A2511825A;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USPlayingCard-8B10CDB3-E2D1-4909-A8DB-3C2A2511825A;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "USPlayingCardContext": "Server=(localdb)\\mssqllocaldb;Database=USPlayingCardContext-3547e8b5-24ff-4b5b-b508-cf2e12eeffaa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
