Part 5 - Working with Database

--- a/USPlayingCard/appsettings.json
+++ b/USPlayingCard/appsettings.json
@@ -1,8 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USPlayingCard-8B10CDB3-E2D1-4909-A8DB-3C2A2511825A;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "USPlayingCardContext": "Server=(localdb)\\mssqllocaldb;Database=USPlayingCardContext-3547e8b5-24ff-4b5b-b508-cf2e12eeffaa;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +7,9 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USPlayingCard-8B10CDB3-E2D1-4909-A8DB-3C2A2511825A;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "USPlayingCardContext": "Server=(localdb)\\mssqllocaldb;Database=USPlayingCardContext-3547e8b5-24ff-4b5b-b508-cf2e12eeffaa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
