do comment ssport in lauch setting

--- a/USPlayingCard/Properties/launchSettings.json
+++ b/USPlayingCard/Properties/launchSettings.json
@@ -3,9 +3,9 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30410"
+      "applicationUrl": "http://localhost:30410",
       //make sure to uncomment when i want to check at home
-      "sslPort": 44345 
+      //"sslPort": 44345 
     }
   },
   "profiles": {
